- Introduction of pytz to finally get the proper localtime displayed
git-svn-id: svn://celaneo.local/EveTimer/trunk@218 0a101332-4a5c-4009-ba00-5ad6272eac1f

--- a/README
+++ b/README
@@ -6,6 +6,11 @@ REQUIREMENTS:
     - GTK 2.6.0 or newer
     - Python 2.4 or newer
 
+Optional but adviced:
+    - pytz (http://pytz.sourceforge.net/) if you want Skill end timings in your current localtime
+    - dbus-python
+
+
 INSTALLATION:
     run 'python setup.py install' as root
 
